# kinoite-daily-driver

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  GETTING_STARTED.md  PROVISION  README.md  WORKSPACE_STATUS.md  kinoite-workspace-root.env.example  pyproject.toml
.firecrawl/: README.md  search-attempt-2026-04-25.md
.github/: dependabot.yml
config/: .wslconfig.example  README.md  declarative-parity.md  default-user.example  locale.env.example  wsl.conf.example
docs/: 3d-and-autodesk.md  README.md  app-mapping.md  appimage-on-atomic.md  atomic-updates-rollback.md  audio-and-display.md  backup-and-sync.md  bluetooth-pipewire.md  doc-to-provision-map.md  fedora-dnf-fallback-optional.md  filesystems-and-external.md  firmware-and-secure-boot.md  flatpak-overrides.md  fonts-and-theming.md  gaming-steam-epic.md  gear-lever.md  gitleaks-optional.md  ides-and-terminals.md  input-and-ime.md  kde-daily-driver-recommendations.md  kde-wsl2-runtime-verification.md  keep-windows.md  kinoite-vs-atomic-desktops.md  kinoite-wsl2.md  llm-and-dev-ai.md  media-and-homelab.md  microsoft-365-on-linux.md  migration-baremetal-checklist.md  networking.md  optional-kde-wsl.md  phases-definition-of-done.md  plan-alignment.md  plan-frontmatter-coverage.md  plan-stipulated-file-tree.md  podman-and-toolbox.md  power-and-battery.md  printing-and-scanning.md  provisional-configuration-index.md  research-workflow-tavily-firecrawl.md  secrets-ssh-gpg.md  (+12 more)
imports/: CAPTURE-MANIFEST-20260425T172206.txt  CAPTURE-MANIFEST-20260425T173027.txt  CAPTURE-MANIFEST-20260425T175108.txt  README.md  (+2 more)
(+112 files in other folders)
