[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kinoite-daily-driver"
version = "0.1.0"
description = "UV / Python entry for Kinoite workspace automation (wraps AIO TUI)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []
authors = [{ name = "Kinoite daily driver" }]

[project.scripts]
kinoite-bootstrap-init = "kinoite_bootstrap.cli:main"

[project.urls]
Homepage = "https://github.com/bolabaden/kinoite-daily-driver"

[tool.hatch.build.targets.sdist]
include = ["src/kinoite_bootstrap", "pyproject.toml", "README.md"]

[tool.hatch.build.targets.wheel]
packages = ["src/kinoite_bootstrap"]

[tool.uv]
package = true
